--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <h4>Miscellaneous</h4>
                                 <ul>
                                     <li>Award: Eagle Scout</li>
-                                    <li>Senior <a href="https://www.phx2600.org">PHX2600</a> Member</li>
+                                    <li><a href="https://www.phx2600.org">PHX2600</a> Member</li>
                                     <li><a href="https://gist.github.com/PHLAK">Miscellaneous Gists</a></li>
                             </div>
 
