- Fixing some responsive problems, specifically at higher resolutions - Added sub-title text

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
 
         <!-- FONTS -->
-        <link  rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-        <link  rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
+        <link  rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|Open+Sans:300,400,600,700,800">
 
         <!-- SCRIPTS -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -33,7 +32,10 @@
 
                     <a href="/" id="site-title">
                         <img src="http://gravatar.com/avatar/f5989c312a1d99856be8474aca4de791?s=300" class="img-rounded">
-                        <h2>Chris Kankiewicz</h2>
+                        <h2>
+                            Chris Kankiewicz<br>
+                            <small>Web Geek &bull; Hacker &bull; Gamer</small>
+                        </h2>
                     </a>
 
                     <div id="social-icons">
