Restyled social icons

--- a/index.html
+++ b/index.html
@@ -32,28 +32,25 @@
 
                     <a href="/" id="site-title">
                         <img src="http://gravatar.com/avatar/f5989c312a1d99856be8474aca4de791?s=300" class="img-rounded">
-                        <h2>
-                            Chris Kankiewicz<br>
-                            <small>Web Geek &bull; Hacker &bull; Gamer</small>
-                        </h2>
+                        <h2>Chris Kankiewicz</h2>
                     </a>
 
                     <div id="social-icons">
 
-                        <a href="http://goo.gl/cbjBW" class="google-plus" title="Google+">
-                            <i class="icon-google-plus-sign"></i>
+                        <a href="http://goo.gl/cbjBW" class="google-plus" title="Google+" rel="tooltip" data-placement="bottom">
+                            <i class="icon-google-plus"></i>
                         </a>
 
-                        <a href="http://goo.gl/BkRbl" class="twitter" title="Twitter">
-                            <i class="icon-twitter-sign"></i>
+                        <a href="http://goo.gl/BkRbl" class="twitter" title="Twitter" rel="tooltip" data-placement="bottom">
+                            <i class="icon-twitter"></i>
                         </a>
 
-                        <a href="http://goo.gl/3QbQq" class="github" title="GitHub">
-                            <i class="icon-github-sign"></i>
+                        <a href="http://goo.gl/3QbQq" class="github" title="GitHub" rel="tooltip" data-placement="bottom">
+                            <i class="icon-github"></i>
                         </a>
 
-                        <a href="http://goo.gl/uH9ZT" class="rss" title="Blog">
-                            <i class="icon-rss-sign"></i>
+                        <a href="http://goo.gl/uH9ZT" class="rss" title="Blog" rel="tooltip" data-placement="bottom">
+                            <i class="icon-rss"></i>
                         </a>
 
                     </div>
