Additional social icon style tweaks and fixes

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 
                     <div id="social-icons">
 
-                        <a href="http://goo.gl/cbjBW" class="google-plus" title="Google+" rel="tooltip" data-placement="bottom">
+                        <a href="http://goo.gl/cbjBW" class="google-plus" title="Google+">
                             <i class="icon-google-plus"></i>
                         </a>
 
-                        <a href="http://goo.gl/BkRbl" class="twitter" title="Twitter" rel="tooltip" data-placement="bottom">
+                        <a href="http://goo.gl/BkRbl" class="twitter" title="Twitter">
                             <i class="icon-twitter"></i>
                         </a>
 
-                        <a href="http://goo.gl/3QbQq" class="github" title="GitHub" rel="tooltip" data-placement="bottom">
+                        <a href="http://goo.gl/3QbQq" class="github" title="GitHub">
                             <i class="icon-github"></i>
                         </a>
 
-                        <a href="http://goo.gl/uH9ZT" class="rss" title="Blog" rel="tooltip" data-placement="bottom">
+                        <a href="http://goo.gl/uH9ZT" class="rss" title="Blog">
                             <i class="icon-rss"></i>
                         </a>
 
