Lots of various style tweaks to round out the design across all screen sizes

--- a/index.html
+++ b/index.html
@@ -66,28 +66,32 @@
 
                 <div id="content-area" class="span9 pull-right">
 
-                    <table class="contact-info-table">
-                        <tbody>
-                            <tr>
+                    <div class="intro-wrapper">
 
-                                <td>
-                                    Web Application Developer <br> Phoenix, Arizona
-                                </td>
+                        <table class="contact-info-table">
+                            <tbody>
+                                <tr>
 
-                                <td class="text-right">
-                                    623-252-6855 <br> <a href="mailto:Chris@ChrisKankiewicz.com" target="_blank">Chris@ChrisKankiewicz.com</a>
-                                </td>
+                                    <td>
+                                        Web Application Developer <br> Phoenix, Arizona
+                                    </td>
 
-                            </tr>
-                        </tbody>
-                    </table>
+                                    <td class="text-right">
+                                        623-252-6855 <br> <a href="mailto:Chris@ChrisKankiewicz.com" target="_blank">Chris@ChrisKankiewicz.com</a>
+                                    </td>
 
-                    <hr>
+                                </tr>
+                            </tbody>
+                        </table>
 
-                    <p>Self taught web developer and designer with real world experience and a
-                    desire to learn. Personal strengths include advanced troubleshooting and problem
-                    solving skills, the capacity to acquire and apply new knowledge quickly and the
-                    ability to work efficiently in a team centric environment.</p>
+                        <hr>
+
+                        <p>Self taught web developer and designer with real world experience and a
+                        desire to learn. Personal strengths include advanced troubleshooting and problem
+                        solving skills, the capacity to acquire and apply new knowledge quickly and the
+                        ability to work efficiently in a team centric environment.</p>
+
+                    </div>
 
                     <h3><i class="icon-briefcase"></i> Experience</h3>
 
