Updated page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Chris Kankiewicz</title>
+        <title>Chris Kankiewicz &bull; Web Application Developer</title>
 
         <!-- STYLES -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
