Moved intro paragraph out of the intro wrapper and removed unneeded div

--- a/index.html
+++ b/index.html
@@ -85,14 +85,13 @@
                             </tbody>
                         </table>
 
-                        <hr>
-
-                        <p>Self taught web developer and designer with real world experience and a
-                        desire to learn. Personal strengths include advanced troubleshooting and problem
-                        solving skills, the capacity to acquire and apply new knowledge quickly and the
-                        ability to work efficiently in a team centric environment.</p>
-
                     </div>
+
+                    <p class="lead">Self taught web developer and designer with real world
+                    experience and a desire to learn. Personal strengths include advanced
+                    troubleshooting and problem solving skills, the capacity to acquire and apply
+                    new knowledge quickly and the ability to work efficiently in a team centric
+                    environment.</p>
 
                     <h3><i class="icon-briefcase"></i> Experience</h3>
                     <div class="row-wrapper">
