--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
 
         <!-- FONTS -->
-        <link  rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|Open+Sans:300,400,600,700,800">
+        <link  rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|Oxygen:300,400,700">
 
         <!-- SCRIPTS -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
