Moved most things inline to improve layout look and feel

--- a/index.html
+++ b/index.html
@@ -94,137 +94,134 @@
                     environment.</p>
 
                     <h3><i class="icon-briefcase"></i> Experience</h3>
-                    <div class="row-wrapper">
-                        <div class="row">
+                    <div class="row">
+                        <div class="span9">
+                            <div class="inner-padding">
 
-                            <div class="span4">
                                 <h4>
                                     Arizona State University<br>
-                                    <small>Web Application Developer (Apr 2011 - Present)</small>
+                                    <small>Web Application Developer (April 2011 - Present)</small>
                                 </h4>
                                 <ul>
                                     <li>Developed, managed and maintained complex PHP based web applications.</li>
                                     <li>Conceptualized, designed and implemented detailed site layouts.</li>
                                 </ul>
-                            </div>
 
-                            <div class="span4">
+                                <br>
+
                                 <h4>
                                     Southwest Medical &amp; Rehab<br>
-                                    <small>Web Developer / Designer (Mar 2009 - Apr 2011)</small>
+                                    <small>Web Developer / Designer (March 2009 - April 2011)</small>
                                 </h4>
                                 <ul>
                                     <li>Conceptualized, designed, implemented and tested detailed e-commerce site layouts.</li>
                                     <li>Performed search engine optimizations to enhance traffic to all sites.</li>
                                 </ul>
-                            </div>
 
-                        </div>
+                                <br>
 
-                        <div class="row">
-
-                            <div class="span4">
                                 <h4>
                                     PetSmart Store Support Group<br>
-                                    <small>Solution Center Technician (Feb 2008 - Mar 2009)</small>
+                                    <small>Solution Center Technician (February 2008 - March 2009)</small>
                                 </h4>
                                 <ul>
                                     <li>Provided over-the-phone technical support to store and corporate employees.</li>
                                     <li>Performed advanced troubleshooting on store servers, registers, and workstations.</li>
                                 </ul>
-                            </div>
 
-                            <div class="span4">
+                                <br>
+
                                 <h4>
                                     Jannenga Enterprises, LLC<br>
-                                    <small>Web / Graphics Designer (May 2006 - Oct 2007)</small>
+                                    <small>Web and Graphics Designer (May 2006 - October 2007)</small>
                                 </h4>
                                 <ul>
                                     <li>Conceptualized, designed and coordinated the implementation of detailed web pages and graphics.</li>
                                     <li>Performed routine and advanced maintenance on PC systems, networks, and other digital equipment.</li>
                                 </ul>
-                            </div>
 
+                            </div>
                         </div>
                     </div>
 
                     <h3><i class="icon-lightbulb"></i> Qualifications</h3>
-                    <div class="row-wrapper">
-                        <div class="row">
+                    <div class="row">
+                        <div class="span9">
+                            <div class="inner-padding">
 
-                            <h4>Proficienct with:</h4>
+                                <h4>Proficienct with:</h4>
 
-                            <div class="span4">
-                                <ul>
-                                    <li>HTML / CSS</li>
-                                    <li>JavaScript / jQuery</li>
+                                <ul class="inline">
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                    <li>jQuery</li>
                                     <li>PHP 5+</li>
                                     <li>MySQL</li>
-                                    <li>Linux based operating systems</li>
-                                    <li>Nginx / Apache</li>
-                                    <li>Search Engine Optimization (SEO)</li>
-                                </ul>
-                            </div>
-
-                            <div class="span4">
-                                <ul>
-                                    <li>All Windows operating systems</li>
-                                    <li>Git Version Control</li>
-                                    <li>Photoshop</li>
+                                    <li>Linux</li>
+                                    <li>Nginx</li>
+                                    <li>Apache</li>
+                                    <li>SEO</li>
                                     <li>Zend Framework</li>
-                                    <li>Wordpress / Drupal</li>
-                                    <li>PC hardware and networking</li>
+                                    <li>CakePHP</li>
+                                    <li>Git Version Control</li>
+                                    <li>Windows</li>
+                                    <li>Photoshop</li>
+                                    <li>Wordpress</li>
+                                    <li>Drupal</li>
+                                    <li>PC hardware</li>
+                                    <li>Networking</li>
                                     <li>Cisco IOS</li>
                                 </ul>
+
                             </div>
-
-
                         </div>
                     </div>
 
                     <h3><i class="icon-book"></i> Education</h3>
-                    <div class="row-wrapper">
-                        <div class="row">
+                    <div class="row">
+                        <div class="span9">
+                            <div class="inner-padding">
 
-                            <div class="span4">
                                 <h4>DeVry University<br><small>July 2005 - February 2008</small></h4>
                                 <ul>
                                     <li>Bachelor's of Science Degree in Network and Communication Management</li>
                                 </ul>
-                            </div>
 
-                            <div class="span4 pull-right">
+                                <br>
+
                                 <h4>Shadow Mountain High School<br><small>2001 - 2005</small></h4>
                                 <ul>
                                     <li>High school diploma</li>
                                     <li>National Honor Society</li>
                                 </ul>
-                            </div>
 
+                            </div>
                         </div>
                     </div>
 
                     <h3><i class="icon-trophy"></i> Achievements</h3>
-                    <div class="row-wrapper">
-                        <div class="row">
+                    <div class="row">
+                        <div class="span9">
+                            <div class="inner-padding">
 
-                            <div class="span4">
-                                <h4>Projects</h4>
-                                <ul>
+                                <h4>Projects:</h4>
+                                <ul class="inline">
                                     <li><a href="http://www.ubergallery.net">UberGallery</a></li>
                                     <li><a href="http://www.directorylister.com">Directory Lister</a></li>
                                     <li><a href="http://phlak.github.io/jColorClock">jColorClock</a></li>
                                 </ul>
-                            </div>
 
-                            <div class="span4 pull-right">
-                                <h4>Miscellaneous</h4>
-                                <ul>
+                                <br>
+
+                                <h4>Miscellaneous:</h4>
+                                <ul class="inline">
                                     <li>Award: Eagle Scout</li>
                                     <li><a href="https://www.phx2600.org">PHX2600</a> Member</li>
-                                    <li><a href="https://gist.github.com/PHLAK">Miscellaneous Gists</a></li>
-                            </div>
+                                    <li><a href="https://gist.github.com/PHLAK">My Gists</a></li>
+                                </ul>
 
+                            </div>
                         </div>
                     </div>
 
