Added blurb and made some other final style tweaks

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                         <h2>Chris Kankiewicz</h2>
                     </a>
 
+                    <div id="blurb">Web Geek &bull; Gamer &bull; Hacker</div>
+
                     <div id="social-icons">
 
                         <a href="http://goo.gl/cbjBW" class="google-plus" title="Google+">
