Responsive styles for screens with a maximum width of 520px

--- a/index.html
+++ b/index.html
@@ -67,25 +67,29 @@
 
                 <div id="content-area" class="span9 pull-right">
 
-                    <div class="intro-wrapper">
+                    <table class="contact-info-table">
+                        <tbody>
+                            <tr>
 
-                        <table class="contact-info-table">
-                            <tbody>
-                                <tr>
+                                <td>
+                                    Web Application Developer <br> Phoenix, Arizona
+                                </td>
 
-                                    <td>
-                                        Web Application Developer <br> Phoenix, Arizona
-                                    </td>
+                                <td class="text-right">
+                                    623-252-6855 <br> <a href="mailto:Chris@ChrisKankiewicz.com" target="_blank">Chris@ChrisKankiewicz.com</a>
+                                </td>
 
-                                    <td class="text-right">
-                                        623-252-6855 <br> <a href="mailto:Chris@ChrisKankiewicz.com" target="_blank">Chris@ChrisKankiewicz.com</a>
-                                    </td>
+                            </tr>
+                        </tbody>
+                    </table>
 
-                                </tr>
-                            </tbody>
-                        </table>
-
+                    <div class="contact-info-mobile">
+                        Web Application Developer <br>
+                        Phoenix, Arizona <br>
+                        623-252-6855 <br>
+                        <a href="mailto:Chris@ChrisKankiewicz.com" target="_blank">Chris@ChrisKankiewicz.com</a>
                     </div>
+
 
                     <p class="lead">Self taught web developer and designer with real world
                     experience and a desire to learn. Personal strengths include advanced
