Update Bootstrap 3 and fixed grid for BS3

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
         <!-- STYLES -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -15,7 +14,7 @@
         <link  rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|Oxygen:300,400,700">
 
         <!-- SCRIPTS -->
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/custom.js"></script>
 
@@ -29,43 +28,7 @@
         <div class="container">
             <div class="row">
 
-                <div id="side-bar" class="span3 clearfix">
-
-                    <a href="/" id="site-title">
-                        <img src="http://gravatar.com/avatar/f5989c312a1d99856be8474aca4de791?s=500" class="img-rounded">
-                        <h2>Chris Kankiewicz</h2>
-                    </a>
-
-                    <div id="social-icons">
-
-                        <a href="http://goo.gl/cbjBW" class="google-plus" title="Google+">
-                            <i class="icon-google-plus"></i>
-                        </a>
-
-                        <a href="http://goo.gl/BkRbl" class="twitter" title="Twitter">
-                            <i class="icon-twitter"></i>
-                        </a>
-
-                        <a href="http://goo.gl/3QbQq" class="github" title="GitHub">
-                            <i class="icon-github"></i>
-                        </a>
-
-                        <a href="http://goo.gl/uH9ZT" class="rss" title="Blog">
-                            <i class="icon-rss"></i>
-                        </a>
-
-                    </div>
-
-                    <!-- <ul id="site-navigation" class="unstyled">
-                        <li><a href="#">Navigation Link</a></li>
-                        <li><a href="#">Navigation Link</a></li>
-                        <li><a href="#">Navigation Link</a></li>
-                        <li><a href="#">Navigation Link</a></li>
-                    </ul> -->
-
-                </div>
-
-                <div id="content-area" class="span9 pull-right">
+                <div id="content-area" class="col-lg-9 col-lg-push-3">
 
                     <table class="contact-info-table">
                         <tbody>
@@ -99,7 +62,7 @@
 
                     <h3><i class="icon-briefcase"></i> Experience</h3>
                     <div class="row">
-                        <div class="span9">
+                        <div class="col-lg-9">
                             <div class="inner-padding">
 
                                 <h4>
@@ -150,7 +113,7 @@
 
                     <h3><i class="icon-lightbulb"></i> Qualifications</h3>
                     <div class="row">
-                        <div class="span9">
+                        <div class="col-lg-9">
                             <div class="inner-padding">
 
                                 <h4>Proficienct with:</h4>
@@ -184,7 +147,7 @@
 
                     <h3><i class="icon-book"></i> Education</h3>
                     <div class="row">
-                        <div class="span9">
+                        <div class="col-lg-9">
                             <div class="inner-padding">
 
                                 <h4>DeVry University<br><small>July 2005 - February 2008</small></h4>
@@ -206,7 +169,7 @@
 
                     <h3><i class="icon-trophy"></i> Achievements</h3>
                     <div class="row">
-                        <div class="span9">
+                        <div class="col-lg-9">
                             <div class="inner-padding">
 
                                 <h4>Projects:</h4>
@@ -232,6 +195,42 @@
                     <div id="site-footer">
                         &copy; 2013 <a href="/">Chris Kankiewicz</a>
                     </div>
+
+                </div>
+
+                <div id="side-bar" class="col-lg-3 col-lg-pull-9">
+
+                    <a href="/" id="site-title">
+                        <img src="http://gravatar.com/avatar/f5989c312a1d99856be8474aca4de791?s=500" class="img-rounded">
+                        <h2>Chris Kankiewicz</h2>
+                    </a>
+
+                    <div id="social-icons">
+
+                        <a href="http://goo.gl/cbjBW" class="google-plus" title="Google+">
+                            <i class="icon-google-plus"></i>
+                        </a>
+
+                        <a href="http://goo.gl/BkRbl" class="twitter" title="Twitter">
+                            <i class="icon-twitter"></i>
+                        </a>
+
+                        <a href="http://goo.gl/3QbQq" class="github" title="GitHub">
+                            <i class="icon-github"></i>
+                        </a>
+
+                        <a href="http://goo.gl/uH9ZT" class="rss" title="Blog">
+                            <i class="icon-rss"></i>
+                        </a>
+
+                    </div>
+
+                    <!-- <ul id="site-navigation" class="unstyled">
+                        <li><a href="#">Navigation Link</a></li>
+                        <li><a href="#">Navigation Link</a></li>
+                        <li><a href="#">Navigation Link</a></li>
+                        <li><a href="#">Navigation Link</a></li>
+                    </ul> -->
 
                 </div>
 
