--- a/index.html
+++ b/index.html
@@ -28,7 +28,36 @@
         <div class="container">
             <div class="row">
 
-                <div id="content-area" class="col-lg-9 col-lg-push-3">
+                <div id="side-bar" class="col-md-3 clearfix">
+
+                    <a href="/" id="site-title">
+                        <img src="http://gravatar.com/avatar/f5989c312a1d99856be8474aca4de791?s=500" class="img-rounded">
+                        <h2>Chris Kankiewicz</h2>
+                    </a>
+
+                    <div id="social-icons">
+
+                        <a href="http://goo.gl/cbjBW" class="google-plus" title="Google+">
+                            <i class="icon-google-plus"></i>
+                        </a>
+
+                        <a href="http://goo.gl/BkRbl" class="twitter" title="Twitter">
+                            <i class="icon-twitter"></i>
+                        </a>
+
+                        <a href="http://goo.gl/3QbQq" class="github" title="GitHub">
+                            <i class="icon-github"></i>
+                        </a>
+
+                        <a href="http://goo.gl/uH9ZT" class="rss" title="Blog">
+                            <i class="icon-rss"></i>
+                        </a>
+
+                    </div>
+
+                </div>
+
+                <div id="content-area" class="col-md-9">
 
                     <table class="contact-info-table">
                         <tbody>
@@ -61,116 +90,104 @@
                     environment.</p>
 
                     <h3><i class="icon-briefcase"></i> Experience</h3>
-                    <div class="row">
-                        <div class="col-lg-9">
-                            <div class="inner-padding">
+                    <div class="col-md-12">
 
-                                <h4>
-                                    Arizona State University<br>
-                                    <small>Web Application Developer (April 2011 - Present)</small>
-                                </h4>
-                                <ul>
-                                    <li>Developed, managed and maintained complex PHP based web applications.</li>
-                                    <li>Conceptualized, designed and implemented detailed site layouts.</li>
-                                </ul>
+                        <h4>
+                            Arizona State University<br>
+                            <small>Web Application Developer (April 2011 - Present)</small>
+                        </h4>
+                        <ul>
+                            <li>Developed, managed and maintained complex PHP based web applications.</li>
+                            <li>Conceptualized, designed and implemented detailed site layouts.</li>
+                        </ul>
 
-                                <br>
+                        <br>
 
-                                <h4>
-                                    Southwest Medical &amp; Rehab<br>
-                                    <small>Web Developer / Designer (March 2009 - April 2011)</small>
-                                </h4>
-                                <ul>
-                                    <li>Conceptualized, designed, implemented and tested detailed e-commerce site layouts.</li>
-                                    <li>Performed search engine optimizations to enhance traffic to all sites.</li>
-                                </ul>
+                        <h4>
+                            Southwest Medical &amp; Rehab<br>
+                            <small>Web Developer / Designer (March 2009 - April 2011)</small>
+                        </h4>
+                        <ul>
+                            <li>Conceptualized, designed, implemented and tested detailed e-commerce site layouts.</li>
+                            <li>Performed search engine optimizations to enhance traffic to all sites.</li>
+                        </ul>
 
-                                <br>
+                        <br>
 
-                                <h4>
-                                    PetSmart Store Support Group<br>
-                                    <small>Solution Center Technician (February 2008 - March 2009)</small>
-                                </h4>
-                                <ul>
-                                    <li>Provided over-the-phone technical support to store and corporate employees.</li>
-                                    <li>Performed advanced troubleshooting on store servers, registers, and workstations.</li>
-                                </ul>
+                        <h4>
+                            PetSmart Store Support Group<br>
+                            <small>Solution Center Technician (February 2008 - March 2009)</small>
+                        </h4>
+                        <ul>
+                            <li>Provided over-the-phone technical support to store and corporate employees.</li>
+                            <li>Performed advanced troubleshooting on store servers, registers, and workstations.</li>
+                        </ul>
 
-                                <br>
+                        <br>
 
-                                <h4>
-                                    Jannenga Enterprises, LLC<br>
-                                    <small>Web and Graphics Designer (May 2006 - October 2007)</small>
-                                </h4>
-                                <ul>
-                                    <li>Conceptualized, designed and coordinated the implementation of detailed web pages and graphics.</li>
-                                    <li>Performed routine and advanced maintenance on PC systems, networks, and other digital equipment.</li>
-                                </ul>
+                        <h4>
+                            Jannenga Enterprises, LLC<br>
+                            <small>Web and Graphics Designer (May 2006 - October 2007)</small>
+                        </h4>
+                        <ul>
+                            <li>Conceptualized, designed and coordinated the implementation of detailed web pages and graphics.</li>
+                            <li>Performed routine and advanced maintenance on PC systems, networks, and other digital equipment.</li>
+                        </ul>
 
-                            </div>
-                        </div>
                     </div>
 
                     <h3><i class="icon-lightbulb"></i> Qualifications</h3>
-                    <div class="row">
-                        <div class="col-lg-9">
-                            <div class="inner-padding">
+                    <div class="col-md-12">
 
-                                <h4>Proficienct with:</h4>
+                        <h4>Proficienct with:</h4>
 
-                                <ul class="inline">
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JavaScript</li>
-                                    <li>jQuery</li>
-                                    <li>PHP 5+</li>
-                                    <li>MySQL</li>
-                                    <li>Linux</li>
-                                    <li>Nginx</li>
-                                    <li>Apache</li>
-                                    <li>SEO</li>
-                                    <li>Zend Framework</li>
-                                    <li>CakePHP</li>
-                                    <li>Git Version Control</li>
-                                    <li>Windows</li>
-                                    <li>Photoshop</li>
-                                    <li>Wordpress</li>
-                                    <li>Drupal</li>
-                                    <li>PC hardware</li>
-                                    <li>Networking</li>
-                                    <li>Cisco IOS</li>
-                                </ul>
+                        <ul class="list-inline">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>jQuery</li>
+                            <li>PHP 5+</li>
+                            <li>MySQL</li>
+                            <li>Linux</li>
+                            <li>Nginx</li>
+                            <li>Apache</li>
+                            <li>SEO</li>
+                            <li>Zend Framework</li>
+                            <li>CakePHP</li>
+                            <li>Git Version Control</li>
+                            <li>Windows</li>
+                            <li>Photoshop</li>
+                            <li>Wordpress</li>
+                            <li>Drupal</li>
+                            <li>PC hardware</li>
+                            <li>Networking</li>
+                            <li>Cisco IOS</li>
+                        </ul>
 
-                            </div>
-                        </div>
                     </div>
 
                     <h3><i class="icon-book"></i> Education</h3>
-                    <div class="row">
-                        <div class="col-lg-9">
-                            <div class="inner-padding">
+                    <div class="col-md-12">
 
-                                <h4>DeVry University<br><small>July 2005 - February 2008</small></h4>
-                                <ul>
-                                    <li>Bachelor's of Science Degree in Network and Communication Management</li>
-                                </ul>
+                        <h4>DeVry University<br><small>July 2005 - February 2008</small></h4>
+                        <ul>
+                            <li>Bachelor's of Science Degree in Network and Communication Management</li>
+                        </ul>
 
-                                <br>
+                        <br>
 
-                                <h4>Shadow Mountain High School<br><small>2001 - 2005</small></h4>
-                                <ul>
-                                    <li>High school diploma</li>
-                                    <li>National Honor Society</li>
-                                </ul>
+                        <h4>Shadow Mountain High School<br><small>2001 - 2005</small></h4>
+                        <ul>
+                            <li>High school diploma</li>
+                            <li>National Honor Society</li>
+                        </ul>
 
-                            </div>
-                        </div>
                     </div>
 
                     <h3><i class="icon-trophy"></i> Achievements</h3>
-                    <div class="row">
-                        <div class="col-lg-9">
-                            <div class="inner-padding">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-6">
 
                                 <h4>Projects:</h4>
                                 <ul class="inline">
@@ -179,7 +196,9 @@
                                     <li><a href="http://phlak.github.io/jColorClock">jColorClock</a></li>
                                 </ul>
 
-                                <br>
+                            </div>
+
+                            <div class="col-md-6">
 
                                 <h4>Miscellaneous:</h4>
                                 <ul class="inline">
@@ -195,42 +214,6 @@
                     <div id="site-footer">
                         &copy; 2013 <a href="/">Chris Kankiewicz</a>
                     </div>
-
-                </div>
-
-                <div id="side-bar" class="col-lg-3 col-lg-pull-9">
-
-                    <a href="/" id="site-title">
-                        <img src="http://gravatar.com/avatar/f5989c312a1d99856be8474aca4de791?s=500" class="img-rounded">
-                        <h2>Chris Kankiewicz</h2>
-                    </a>
-
-                    <div id="social-icons">
-
-                        <a href="http://goo.gl/cbjBW" class="google-plus" title="Google+">
-                            <i class="icon-google-plus"></i>
-                        </a>
-
-                        <a href="http://goo.gl/BkRbl" class="twitter" title="Twitter">
-                            <i class="icon-twitter"></i>
-                        </a>
-
-                        <a href="http://goo.gl/3QbQq" class="github" title="GitHub">
-                            <i class="icon-github"></i>
-                        </a>
-
-                        <a href="http://goo.gl/uH9ZT" class="rss" title="Blog">
-                            <i class="icon-rss"></i>
-                        </a>
-
-                    </div>
-
-                    <!-- <ul id="site-navigation" class="unstyled">
-                        <li><a href="#">Navigation Link</a></li>
-                        <li><a href="#">Navigation Link</a></li>
-                        <li><a href="#">Navigation Link</a></li>
-                        <li><a href="#">Navigation Link</a></li>
-                    </ul> -->
 
                 </div>
 
